--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "FedJust"
-version = "0.1.2.5"
+name = "SHAP_MIA"
+version = "0.1"
 description = ""
 authors = ["Scolpe <63779111+Scolpe@users.noreply.github.com>"]
 readme = "README.md"
-packages = [{include = "FedJust"}]
+packages = [{include = "SHAP_MIA"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
