--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ torch = ">= 2.2.0"
 torchvision = ">= 0.1.5"
 datasets = ">= 2.17.0"
 numpy = ">= 1.2.6"
+opacus = ">= 1.5.2"
 scikit-learn = ">= 1.4"
+privacy-meter = ">= 1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
