--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ numpy = ">= 1.2.6"
 opacus = ">= 1.5.2"
 scikit-learn = ">= 1.4"
 privacy-meter = ">= 1.0.1"
+timm = ">= 1.0.9"
 
 [build-system]
 requires = ["poetry-core"]
