--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "SHAP_MIA"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-torch = ">= 2.2.0"
+torch = "== 2.2.0"
 torchvision = ">= 0.1.5"
 datasets = ">= 2.17.0"
 numpy = ">= 1.2.6"
